--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,4 @@ gcc = "^0.3"
 libc = "^0.2"
 time = "^0.1"
 rand = "^0.3"
-rustc-serialize = "^0.3"
+#rustc-serialize = "^0.3" -- removed as it is not compatible with WebAssembly
