--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ name = "crypto"
 [features]
 with-bench = []
 
-[build-dependencies]
-gcc = "^0.3"
+#[build-dependencies]
+#gcc = "^0.3"
 
 [dependencies]
 libc = "^0.2"
